<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_fragment_title" />

    <LinearLayout
        android:id="@+id/ll_fgt_detail_data"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:layout_marginTop="16dp"
        android:layout_weight="1"
        android:orientation="vertical" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@color/data_icon"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingTop="8dp">

        <LinearLayout
            android:id="@+id/ll_electric_detail_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_electric_detail_data"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_launcher_data" />

            <TextView
                android:id="@+id/btn_electric_detail_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/electric_power"
                android:textSize="10sp" />

            <View
                android:id="@+id/v_electric_detail_data"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_environment_detail_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_environment_detail_data"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_launcher_event" />

            <TextView
                android:id="@+id/btn_environment_detail_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/environment"
                android:textSize="10sp" />

            <View
                android:id="@+id/v_environment_detail_data"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/data_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_busbar_detail_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_busbar_detail_data"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_launcher_work_order" />

            <TextView
                android:id="@+id/btn_busbar_detail_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/busbar"
                android:textSize="10sp" />

            <View
                android:id="@+id/v_busbar_detail_data"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:background="@color/data_icon"
                android:paddingTop="8dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_flooding_detail_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_flooding_detail_data"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_launcher_report" />

            <TextView
                android:id="@+id/btn_flooding_detail_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/flood"
                android:textSize="10sp" />

            <View
                android:id="@+id/v_flooding_detail_data"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/data_icon" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_video_detail_data"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/iv_video_detail_data"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:paddingTop="4dp"
                android:paddingBottom="4dp"
                android:src="@drawable/ic_launcher_mine" />

            <TextView
                android:id="@+id/btn_video_detail_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/video"
                android:textSize="10sp" />

            <View
                android:id="@+id/v_video_detail_data"
                android:layout_width="match_parent"
                android:layout_height="4dp"
                android:layout_marginTop="8dp"
                android:background="@color/data_icon" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_other_data"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/btn_analysus_detail_data"
            style="@style/Button_Style"
            android:layout_width="match_parent"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:text="数据统计分析" />

        <ImageView
            android:id="@+id/iv_data_detail_data"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>